--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -2,12 +2,13 @@
     position: relative;
     color: white;
     padding: 1rem;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 0.5rem;
+    background-color: var(--color-movie-bg);
+    border-radius: 0.25rem;
     margin-bottom: 1rem;
     display: inline-block;
     margin: 2rem 1rem 2rem 1rem;
     vertical-align: top;
+    box-shadow: 0 2px 4px #111;
 }
 
 .movie img {
@@ -17,6 +18,8 @@
     object-fit: contain;
     background-color: rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
+    border-radius: 0.25rem;
+    overflow: hidden;
 }
 
 .info {
@@ -48,7 +51,7 @@
     float: right;
 }
 
-.watch, .add, .inList {
+.watch, .add {
     height: 1.25rem;
     padding: 0.25rem;
     text-transform: uppercase;
@@ -59,7 +62,8 @@
     cursor: pointer;
     line-height: 1.25rem;
     transition: all 0.25s ease;
-    border-radius: 0.5rem;
+    border-radius: 0.25rem;
+    box-shadow: 0 2px 2px #333;
 }
 .watch:hover, .add:hover {
     background-color: rgba(255, 255, 255, 0.3);
@@ -75,25 +79,28 @@
     font-size: 2rem;
     line-height: 1.6rem;
     font-weight: bold;
-    color: rgba(255, 255, 255, 0.3);
-    border: 2px solid rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 1);
     border-radius: 1rem;
     text-align: center;
     transition: all 0.25s ease;
     cursor: pointer;
+    background-color: #777;
+    opacity: 0.5;
 }
 .remove:hover {
-    color: rgba(255, 255, 255, 0.7);
-    border: 2px solid rgba(255, 255, 255, 0.7);
+    color: rgba(255, 100, 100, 1);
+    opacity: 1;
 }
 .remove:active {
-    color: rgba(255, 0, 0, 0.7);
+    background-color: #CCC;
 }
 
-
-
 .inList {
-    cursor: default;
-    opacity: 0.5;
-    background-color: rgba(100, 255, 100, 0.2);
+    height: 1.25rem;
+    padding: 0.25rem;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.25rem;
 }
