--- a/src/components/Movie/Movie.module.css
+++ b/src/components/Movie/Movie.module.css
@@ -24,16 +24,27 @@
 
 .info {
     width: 14rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+}
 
+.link {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(126 184 255);
+    font-weight: bold;
+    text-shadow: 1px 1px black;
 }
 
 .title {
     text-align: center;
     font-weight: bold;
-    font-size: 1rem;
-    min-height: 2.5rem;
+    font-size: 1.1rem;
+    height: 2.5rem;
     line-height: 1.25rem;
+    margin-bottom: 0.25rem;
+    overflow: hidden;
+    text-shadow: 1px 1px black;
 }
 
 .buttons {
@@ -64,6 +75,7 @@
     transition: all 0.25s ease;
     border-radius: 0.25rem;
     box-shadow: 0 2px 2px #333;
+    text-shadow: 1px 1px black;
 }
 .watch:hover, .add:hover {
     background-color: rgba(255, 255, 255, 0.3);
@@ -103,4 +115,5 @@
     font-weight: bold;
     text-align: center;
     line-height: 1.25rem;
+    text-shadow: 1px 1px black;
 }
